--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -11,6 +11,12 @@
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
+                <label for="price">Price</label>
+                <input type="text" name="price" id="price">
+                <label for="title">Description</label>
+                <input type="text" name="description" id="description">
+                <label for="price">Ratings</label>
+                <input type="text" name="ratings" id="ratings">
             </div>
 
             <button class="btn" type="submit">Add Product</button>
