--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -23,7 +23,7 @@
                         </div>
                         <div class="card__actions">
                             <button class="btn">Add to Cart</button>
-                            <a href=<a href="/admin/delete-product">
+                            <a href="/admin/delete-product">
                                 <button class="btn">
                                     Click Here
                                 </button>
