fix delete product

--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -25,7 +25,7 @@
                             <button class="btn">Add to Cart</button>
                             <a href="/admin/delete-product">
                                 <button class="btn">
-                                    Click Here
+                                    Delete Product
                                 </button>
                             </a>
                         </div>
