--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -19,7 +19,7 @@
                         </div>
                         <div class="card__content">
                             <h2 class="product__price"><%= product.price %></h2>
-                            <p class="product__description"><%= product.description %></p>
+                            <p class="product__description"><%= product.description %> <%= product.ratings %></p>
                         </div>
                         <div class="card__actions">
                             <button class="btn">Add to Cart</button>
