--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <%- include('includes/navigation.ejs') %>
-
+    <% console.log(prods) %> 
     <main>
         <% if (prods.length > 0) { %>
             <div class="grid">
