--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -4,6 +4,7 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
+
     <main>
         <% if (prods.length > 0) { %>
             <div class="grid">
@@ -19,10 +20,9 @@
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
                             <p class="product__description"><%= product.description %></p>
-                            <p class="product__description"><%= product.ratings %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                         </div>
                     </article>
                 <% } %>
