fix styling on welcome message

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,6 +61,7 @@ form {
 }
 
 .main-header__item a,
+.main-header__item p,
 .main-header__item button {
   font: inherit;
   background: transparent;
